--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -4,8 +4,9 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    # “At 13:37 on every day-of-week from Monday through Friday.”
-    - cron: '03 4 * * *'
+    # “ every 6 minutes”
+    - cron: "*/6 * * * *"
+
 
 jobs:
   update-readme:
